--- a/ClassicTales/index.html
+++ b/ClassicTales/index.html
@@ -4,8 +4,20 @@ img{
  max-height:300px;
 }
 </style>
+<h2>The Lion and the Mouse</h2>
+<p>A Fable by Aesop Illustrated by Gail McIntosh</p>
+<p>One day a little mouse was scampering about. The mouse accidently ran across the paw of a sleeping lion.</p>
 <img src="1a-1.jpg"><br>
+<p>The angry lion awoke and captured the mouse in his great, big, furry paws.</p>
 <img src="1a-2.jpg"><br>
+<p>The lion was just about to eat the mouse when the tiny creature cried out, “Please set me free. One day I will return your kindness.”</p>
 <img src="1a-3.jpg"><br>
+<p>So the lion released the mouse.</p>
 <img src="1a-4.jpg"><br>
+<p>A little while later, the mouse heard what sounded like angry roars. The mouse followed the sounds and discovered the lion trapped in a net made of ropes.</p>
+<p>Though frightened, the mouse was determined to keep his promise.</p>
 <img src="1a-5.jpg"><br>
+<p>Using his sharp teeth, the mouse made a hole in the net. And so the great lion was set free by the little mouse.</p>
+<p>The moral of this story is:</br>
+Friends who are little in size can still be great friends.</p>
+<p></p>
