--- a/ClassicTales/index.html
+++ b/ClassicTales/index.html
@@ -5,7 +5,7 @@ img{
 }
 </style>
 <h2>The Lion and the Mouse</h2>
-<p>A Fable by Aesop Illustrated by Gail McIntosh</p>
+<cite>A Fable by Aesop Illustrated by Gail McIntosh</cite>
 <p>One day a little mouse was scampering about. The mouse accidently ran across the paw of a sleeping lion.</p>
 <img src="1a-1.jpg"><br>
 <p>The angry lion awoke and captured the mouse in his great, big, furry paws.</p>
